@@ -1,3 +1,11 @@
+2002-01-02  Kevin Vandersloot <kfv101@psu.edu>
+
+	* favorites.c: when hiding or reshowing a processes make sure
+	to do that on all processes of the same name
+
+	* interface.c: let the devices treeview scroll in the horizontal
+	direction
+
 2001-12-30  Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c: don't remove items from tree that aren't
